Random Bullshit Go!
- Migrated from log4j to slf4j + logback
- Sorted plugins in the plugin tab
- Added partial support for GraalVM native image via Gluon (WIP)
- Created time-based fake progress task for cloning the main repository
- Added support for downloading pull request artifacts and changed the ui option in the main menu